--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Anthydropic</string>
+    <string name="gps_not_supported">需取得位置相關權限</string>
+    <string name="bluetooth_not_supported">設備不支持藍芽</string>
+    <string name="ble_not_supported">設備不支持低功耗藍芽</string>
 </resources>
